third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/attributes/attribute_placement.exp
module 0x42::N {
    public fun bar() {
        ()
    }
}

module 0x42::M {
    use 0x42::N;
    struct S {
    }
    public fun foo() {
        N::bar();
    }
}

script {
    use 0x42::M;
    entry fun <SELF>_0() {
        M::foo();
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
   ┌─ attribute_placement.move:18:15
   │
18 │     entry fun <SELF>_0() {
   │               ^
   │               │
   │               Unexpected '<'
   │               Expected an identifier
